Fix layout on mobile, enhance reset functionality

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 
 .app {
     min-height: 100vh;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
