--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 6px 58px;
+    padding: 6px 40px;
     margin-bottom: 17px;
     color: $medium-gray;
     span {
